@@ -12,7 +12,6 @@
  */
 package com.netflix.conductor.core.execution.mapper;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -58,37 +57,27 @@ public class LambdaTaskMapper implements TaskMapper {
 
         LOGGER.debug("TaskMapperContext {} in LambdaTaskMapper", taskMapperContext);
 
-        WorkflowTask taskToSchedule = taskMapperContext.getTaskToSchedule();
-        WorkflowModel workflowInstance = taskMapperContext.getWorkflowInstance();
+        WorkflowTask workflowTask = taskMapperContext.getWorkflowTask();
+        WorkflowModel workflowModel = taskMapperContext.getWorkflowModel();
         String taskId = taskMapperContext.getTaskId();
 
         TaskDef taskDefinition =
                 Optional.ofNullable(taskMapperContext.getTaskDefinition())
-                        .orElseGet(() -> metadataDAO.getTaskDef(taskToSchedule.getName()));
+                        .orElseGet(() -> metadataDAO.getTaskDef(workflowTask.getName()));
 
         Map<String, Object> taskInput =
                 parametersUtils.getTaskInputV2(
-                        taskMapperContext.getTaskToSchedule().getInputParameters(),
-                        workflowInstance,
+                        taskMapperContext.getWorkflowTask().getInputParameters(),
+                        workflowModel,
                         taskId,
                         taskDefinition);
 
-        TaskModel lambdaTask = new TaskModel();
+        TaskModel lambdaTask = taskMapperContext.createTaskModel();
         lambdaTask.setTaskType(TaskType.TASK_TYPE_LAMBDA);
-        lambdaTask.setTaskDefName(taskMapperContext.getTaskToSchedule().getName());
-        lambdaTask.setReferenceTaskName(
-                taskMapperContext.getTaskToSchedule().getTaskReferenceName());
-        lambdaTask.setWorkflowInstanceId(workflowInstance.getWorkflowId());
-        lambdaTask.setWorkflowType(workflowInstance.getWorkflowName());
-        lambdaTask.setCorrelationId(workflowInstance.getCorrelationId());
         lambdaTask.setStartTime(System.currentTimeMillis());
-        lambdaTask.setScheduledTime(System.currentTimeMillis());
         lambdaTask.setInputData(taskInput);
-        lambdaTask.setTaskId(taskId);
         lambdaTask.setStatus(TaskModel.Status.IN_PROGRESS);
-        lambdaTask.setWorkflowTask(taskToSchedule);
-        lambdaTask.setWorkflowPriority(workflowInstance.getPriority());
 
-        return Collections.singletonList(lambdaTask);
+        return List.of(lambdaTask);
     }
 }
